--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,16 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+
+#CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
